# dotvim

./: .black.toml  .bumpversion.cfg  .coc-extensions.yml  .eslintrc.json  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pre-commit-fix.yaml  .proselint-config.json  .shellcheckrc  .vimrc  .vimspector.json  CONVENTIONS.md  LEARNING.md  PROMPT-INSTRUCTIONS.md  README  README.md  README.md.template  TODO.md  UPDATE_VIMWIKI  addsubmodule  after-clone  aider-conventions.md  branches.out  build  chatgpt-prompt.txt  early-settings  exclude_files  local  maps  mklearntxt  mkreadme  move-lang-plugins.sh  mvsubmodule  mystuff  notes  ops  pyproject.toml  (+12 more)
.vim/: .VimballRecord  .gitignore  .vimrc  coc-settings.json  plugininfo.vim  statusline.vim
.vim/UltiSnips/: sh.snippets
.vim/bundle/: vimwiki
.vim/colors/: desert_harleypig.vim
.vim/doc/: evaluate.txt  learning.txt  myhelp.txt  tags
.vim/extra/: global_syntax.vim  journaltimestamp.vim  misc.vim  plugin_settings.vim  settings.vim  settings_showmarks.vim  settings_syntastic.vim  settings_vimwiki.vim  statusline.vim  timestamp.vim
.vim/plugin/: soywiki_starter.vim  vimwiki.vim
.vim/sessions/: default.vim
.vim/syntax/: vimwiki.vim
.vim/tools/: .perlcriticrc  efm_perl.pl  vimwiki2html.sh
.vim/vba/: Align.vba  DrawIt.vba  Rainbow.vba  StlShowFunc.vba  WhereFrom.vba  help.vba  hilinks.vba
OLD_FILES/: old_LEARNING.md  old_vimrc  plugins-to-try
OLD_FILES/plugin/: autoclose.vim  gundo.vim  surround.vim
docker/: Dockerfile  maybe
docs/: CONVENTIONS.md  DEFAULTS.md  GLOBAL.md  LANGUAGE_SETUP_TEMPLATE.md  ansible.md  coc-ale-notes.md  coc-ale-setup.md  coc-extensions.md  coc.md  core-requirements.md  docker.md  extensions-to-try.md  hashicorp.md  html.md  java.md  json.md  language-support-template.md  plugins-to-try  plugins-to-try.md  proselint.md  python.md  shell.md  statusline.md  todo.md  toml.md  utility.md  vim-files.md  yaml.md
git_plugin/: __init__.py  cli.py  doc.py  dump-maps.py  git.py  learning.py  readme.py  util.py
html/: build_html.pl
html/vimdoc-1.3/: makehtml.awk  makelatex.awk  maketags.awk  t  vim.sty  vim2html.pl  vimmanual.tex
pages/: environment.md  filesystem.md  home.md  indenting.md  syntax.md
tools/: .perlcriticrc  config.rb
vimwiki/: .hgignore  .hgtags
vimwiki/.hg/: branchheads.cache  dirstate  undo.desc  (+2 more)
(+334 files in other folders)
