[tool.poetry]
name = "git-submodule-manager"
version = "0.2.0"
description = "An intuitive Python CLI tool for streamlined Git submodule management, enabling users to add, move, and rename submodules with ease."
authors = ["Alan Young <harleypig@harleypig.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "git_plugin"}]

[tool.poetry.scripts]
git-plugin = "git_plugin.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
GitPython = "^3.1.31"
click = "^8.1.3"
giturlparse = "^0.10.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^7.2.2"
pylint = "^2.17.1"
pytest-cov = "^4.0.0"
pre-commit = "^2.16.0"
toml = "^0.10.2"
toml-sort = "^0.18.0"
pudb = "^2022.1.3"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
